--- a/src/main/resources/property/contentPage_ru.properties
+++ b/src/main/resources/property/contentPage_ru.properties
@@ -1,5 +1,5 @@
-login.log_in=бнирх
-login.login_placeholder=щлеик
-login.password_placeholder=оюпнкэ
-title.locale.ru=пся
-title.locale.en=юмцк
+login.log_in=\u0412\u041E\u0419\u0422\u0418
+login.login_placeholder=\u042D\u041C\u0415\u0419\u041B
+login.password_placeholder=\u041F\u0410\u0420\u041E\u041B\u042C
+title.locale.ru=\u0420\u0423\u0421
+title.locale.en=\u0410\u041D\u0413\u041B
